# wywh

./: .gitignore  Cargo.toml  README.md
async-bevy-events/: Cargo.toml
async-bevy-events/src/: async_events.rs  funnel.rs  lib.rs
bevy_renderdoc/: Cargo.toml  README.md
bevy_renderdoc/src/: lib.rs
event-funnel/: Cargo.toml
event-funnel/src/: lib.rs
example-assets/: chest.toml
mip-texture-array/: Cargo.toml  README.md
mip-texture-array/assets/: testing_frag.wgsl
mip-texture-array/src/: asset.rs  error.rs  lib.rs  main.rs  mipmap.rs  mipmap.wgsl
octo/: Cargo.toml
octo/benches/: lensed.rs  octree.rs  subdiv.rs  subdiv_bench.rs
octo/src/: lensed.rs  lib.rs  octree.rs  region.rs  subdiv.rs  voxelmap.rs  voxelset.rs
test-app/: Cargo.toml
test-app/assets/shaders/: chunk_bindings.wgsl  constants.wgsl  greedy_mesh_frag.wgsl  greedy_mesh_material.wgsl  greedy_mesh_prepass.wgsl  greedy_mesh_utils.wgsl  greedy_mesh_vert.wgsl  registry_bindings.wgsl  utils.wgsl  voxel_chunk_frag.wgsl  voxel_chunk_frag_prepass.wgsl  voxel_chunk_mat.frag  voxel_chunk_mat.vert  voxel_chunk_mat.wgsl  voxel_chunk_prepass.wgsl  voxel_chunk_vertex.wgsl  vxl_chunk_frag.wgsl  vxl_chunk_frag_prepass.wgsl  vxl_chunk_io.wgsl  vxl_chunk_vert.wgsl  vxl_chunk_vert_prepass.wgsl  vxl_pbr_input.wgsl  vxl_types.wgsl
test-app/assets/variants/: debug.block  debug.variant  stone.block  stone.variant  void.variant  water.block  water.variant
test-app/src/: camera.rs  controls.rs  debug_info.rs  main.rs
voxel-engine/: Cargo.toml
voxel-engine/benches/: hashmap_chunk_storage.rs  indexed_chunk_storage.rs  layered_chunk_storage.rs
voxel-engine/shaders/: voxel_chunk_mat.frag  voxel_chunk_mat.vert
voxel-engine/src/: chunk.rs  data.rs  defaults.rs  diagnostics.rs  error.rs  lib.rs  registry.rs  render.rs  testing_utils.rs  tile.rs  topo.rs  util.rs  world.rs
voxel-engine/src/data/: error.rs  mod.rs  registry.rs  systems.rs  texture.rs  textures.rs  tile.rs  variant_file_loader.rs  voxel.rs
voxel-engine/src/data/registries/: block.rs  error.rs  mod.rs  normals.rs  texture.rs  variant.rs
voxel-engine/src/data/resourcepath/: error.rs  impls.rs  mod.rs  serde.rs
voxel-engine/src/data/voxel/: descriptor.rs  mod.rs  rotations.rs  serialization.rs
voxel-engine/src/render/: adjacency.rs  error.rs  face_mesh.rs  greedy_mesh.rs  greedy_mesh_material.rs  lod.rs  material.rs  mesh.rs  mesh_builder.rs  meshing_algos.rs  mod.rs  model_data.rs  occlusion.rs  quad.rs  systems.rs  vertex.rs
voxel-engine/src/render/core/: buffer_utils.rs  chunk_batches.rs  chunk_multidraw.rs  commands.rs  draw.rs  gpu_chunk.rs  gpu_registries.rs  graph.rs  hzb.rs  impls.rs  lights.rs  mat.rs  mod.rs  observers.rs  phase.rs  pipelines.rs  plugin.rs  prepass.rs  prepass_pipeline.rs  queue.rs  render.rs  render_pipeline.rs  shadows.rs  utils.rs  views.rs
voxel-engine/src/render/core/indirect/: buffer_utils.rs  commands.rs  indirect_chunk_data.rs  mod.rs  prepass_pipeline.rs  prepass_queue.rs  render_pipeline.rs  render_queue.rs  shadow_queue.rs
voxel-engine/src/render/core/multidraw/: chunk_multidraw.rs  commands.rs  mod.rs  pipeline.rs  queue.rs  render.rs
voxel-engine/src/render/core/occlusion/: hzb.rs  mod.rs  occluders.rs
voxel-engine/src/render/core/shaders/: chunk_frag.wgsl  chunk_io.wgsl  chunk_vert.wgsl  constants.wgsl  construct_hzb_level.wgsl  deferred_indirect_chunk.wgsl  mod.rs  multidraw_chunk_bindings.wgsl  multidraw_chunk_frag.wgsl  multidraw_chunk_prepass_frag.wgsl  multidraw_chunk_prepass_vert.wgsl  multidraw_chunk_vert.wgsl  observer_batch_frustum_cull.wgsl  occluder_depth.wgsl  pbr_input.wgsl  populate_indirect_buffer.wgsl  populate_observer_buffers.wgsl  preprocess_batch.wgsl  preprocess_light_batch.wgsl  registry_bindings.wgsl  types.wgsl  utils.wgsl
voxel-engine/src/render/meshing/: ecs.rs  error.rs  mod.rs  workers.rs
voxel-engine/src/render/meshing/controller/: ecs.rs  events.rs  mod.rs  scheduler.rs  workers.rs
voxel-engine/src/render/meshing/greedy/: algorithm.rs  error.rs  greedy_mesh.rs  material.rs  mod.rs
voxel-engine/src/render/quad/: anon.rs  data.rs  error.rs  isometric.rs  mod.rs
voxel-engine/src/topo/: access.rs  block.rs  bounding_box.rs  chunk.rs  chunk_ref.rs  containers.rs  ecs.rs  error.rs  generator.rs  mod.rs  neighbors.rs  realm.rs  storage.rs  systems.rs  transformations.rs  util.rs
voxel-engine/src/topo/controller/: batch.rs  ecs.rs  error.rs  events.rs  handle_events.rs  mod.rs  observer_events.rs  permits.rs
voxel-engine/src/topo/storage/: containers.rs  data_structures.rs  error.rs  mod.rs
voxel-engine/src/topo/storage/containers/: data_storage.rs  dense.rs  mod.rs
voxel-engine/src/topo/world/: chunk.rs  chunk_entity.rs  chunk_manager.rs  chunk_ref.rs  error.rs  mod.rs  realm.rs
voxel-engine/src/topo/world/chunk_manager/: ecs.rs  error.rs  inner_storage.rs  mod.rs
voxel-engine/src/topo/world/chunk_populator/: default_generator.rs  events.rs  mod.rs  worldgen.rs
voxel-engine/src/topo/world/new_chunk_manager/: ecs.rs  error.rs  inner_storage.rs  mod.rs
voxel-engine/src/topo/worldgen/: ecs.rs  error.rs  generator.rs  mod.rs
voxel-engine/src/util/: chunks.rs  cubic.rs  intdiv.rs  iteration.rs  keyed_ord.rs  mod.rs  notnan.rs  result.rs  sync.rs
