[workspace]
edition = "2021"
resolver = "2"
members = [
    "test-app",
    "voxel-engine",
    "mip-texture-array",
    "bevy_renderdoc",
    "octo"
]

[workspace.dependencies]
# bevy = {git = "https://github.com/bevyengine/bevy.git", rev = "2c7eab1b4c4ec6c533b6b609d5ddf8a7282f2c4f"}
bevy = "0.14.0"
crossbeam = "0.8.2"

[profile.release]
opt-level = 2
debug = "full"
strip = "none"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1