[workspace]
edition = "2021"
resolver = "2"
members = [
    "test-app",
    "voxel-engine",
    "mip-texture-array",
    "bevy_renderdoc",
    "octo",
    "async-bevy-events"
]

[workspace.dependencies]
# Workspace crates
async-bevy-events.path = "./async-bevy-events"
bevy_renderdoc.path = "./bevy_renderdoc"
octo.path = "./octo"
voxel-engine.path = "./voxel-engine"
mip-texture-array.path = "./mip-texture-array"

# Regular dependencies
bevy = "0.14.2"
flume = "0.11.0"
thiserror = "1.0.63"
dashmap = "6.1.0"
static_assertions = "1.1.0"
parking_lot = "0.12.3"

[workspace.dependencies.derive_more]
version = "1.0.0"
features = ["full"]

[profile.release]
opt-level = 2
debug = "full"
strip = "none"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 0
