[package]
name = "octo"
version = "0.3.1"
edition = "2021"

[profile.bench]
opt-level = 3
debug = "full"
strip = "none"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[dependencies]
ahash = "0.8.11"
derive-new = "0.6.0"
glam = "0.28.0"
hashbrown = "0.14.5"
ndarray = "0.16.0"
smallvec = "1.13.2"
static_assertions = "1.1.0"
thiserror = "1.0.63"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "octree"
harness = false

[[bench]]
name = "subdiv_bench"
harness = false
