[package]
name = "octo"
version = "0.3.2"
edition = "2021"

[profile.bench]
opt-level = 3
debug = "full"
strip = "none"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[dependencies]
static_assertions.workspace = true
thiserror.workspace = true
ahash = "0.8.11"
derive-new = "0.6.0"
glam = { version = "0.28.0", features = ["serde"] }
hashbrown = "0.14.5"
ndarray = "0.16.0"
smallvec = "1.13.2"
rustc-hash = "2.0.0"
itertools = "0.13.0"
slab = "0.4.9"
serde = { version = "1.0.210", features = ["derive"] }
num = "0.4.3"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "octree"
harness = false

[[bench]]
name = "subdiv_bench"
harness = false
