[package]
name = "test-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy.git", rev = "546f7fc194e9435eb177035fe67a030db4091f1b"}
voxel-engine = {path = "../voxel-engine"}
