[package]
name = "test-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {workspace = true}
crossbeam = {workspace = true}
voxel-engine = {path = "../voxel-engine"}
bevy_renderdoc = {path = "../bevy_renderdoc"}
