[package]
name = "voxel-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.3"
anyhow = "1.0.75"
anymap2 = "0.13.0"
bevy = {workspace = true}
bevy_rapier3d = "0.23.0"
bimap = "0.6.3"
bracket-noise = "0.8.7"
crossbeam = "0.8.2"
dashmap = "5.5.3"
derive_more = "0.99.17"
downcast-rs = "1.2.0"
hashbrown = "0.14.2"
noise = "0.8.2"
num = "0.4.1"
num-derive = "0.4.0"
num-traits = "0.2.16"
parking_lot = "0.12.1"
pretty_assertions = "1.4.0"
rand = "0.8.5"
rayon = "1.7.0"
serde = { version = "1.0.152", features = ["serde_derive"] }
smallvec = "1.11.1"
static_assertions = "1.1.0"
thiserror = "1.0.38"
tinyvec = { version = "1.6.0", features = ["alloc"] }

[dev-dependencies]
criterion = "0.5.1"
itertools = "0.11.0"

[[bench]]
name = "layered_chunk_storage"
harness = false


[[bench]]
name = "hashmap_chunk_storage"
harness = false

[[bench]]
name = "indexed_chunk_storage"
harness = false
