[package]
name = "voxel-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.3"
anyhow = "1.0.75"
anymap = "0.12.1"
ascii = { version = "1.1.0", features = ["serde"] }
bevy = {workspace = true}
mip-texture-array = {path = "../mip-texture-array"}
bevy_crevice = "0.7.0"
bevy_rapier3d = "0.23.0"
bimap = "0.6.3"
bitflags = "2.4.1"
bracket-noise = "0.8.7"
crevice = { version = "0.14.0", features = ["glam"] }
crossbeam = {workspace = true}
dashmap = "5.5.3"
derive_more = "0.99.17"
deser-hjson = "2.2.4"
downcast-rs = "1.2.0"
hashbrown = { version = "0.14.2", features = ["rayon"] }
indexmap = "2.1.0"
itertools = "0.11.0"
noise = "0.8.2"
num = "0.4.1"
num-derive = "0.4.0"
num-traits = "0.2.16"
ordered-float = { version = "4.2.0", features = ["serde", "bytemuck", "rand"] }
parking_lot = "0.12.1"
pretty_assertions = "1.4.0"
rand = "0.8.5"
rayon = "1.7.0"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.1"
slice-of-array = "0.3.2"
smallvec = "1.11.1"
static_assertions = "1.1.0"
thiserror = "1.0.38"
tinyvec = { version = "1.6.0", features = ["alloc"] }
nom = "7.1.3"
derive-new = "0.6.0"
toml = "0.8.10"
walkdir = "2.5.0"
fxhash = "0.2.1"
indoc = "2.0.5"
multi-map = "1.3.0"
binary-heap-plus = "0.5.0"
wyhash2 = "0.2.1"
once_cell = "1.19.0"
rangemap = "1.5.1"
enum-map = "2.7.3"
fnv = "1.0.7"
rustc-hash = "2.0.0"
nohash = "0.2.0"
bytemuck = "1.16.1"
overload = "0.1.1"

[dev-dependencies]
criterion = "0.5.1"
itertools = "0.11.0"

[[bench]]
name = "layered_chunk_storage"
harness = false


[[bench]]
name = "hashmap_chunk_storage"
harness = false

[[bench]]
name = "indexed_chunk_storage"
harness = false
