[package]
name = "voxel-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
bevy.workspace = true
dashmap.workspace = true
thiserror.workspace = true
flume.workspace = true
static_assertions.workspace = true
parking_lot.workspace = true
derive_more.workspace = true
async-bevy-events.workspace = true
mip-texture-array.workspace = true

# Crate dependencies
ahash = "0.8.3"
anyhow = "1.0.75"
anymap = "0.12.1"
octo = {path = "../octo"}
bevy_rapier3d = "0.23.0"
bitflags = "2.4.1"
bracket-noise = "0.8.7"
deser-hjson = "2.2.4"
hashbrown = { version = "0.14.2" }
indexmap = "2.1.0"
itertools = "0.13"
noise = "0.8.2"
num = "0.4.1"
num-derive = "0.4.0"
num-traits = "0.2.16"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.1"
slice-of-array = "0.3.2"
smallvec = "1.11.1"
derive-new = "0.6.0"
toml = "0.8.10"
walkdir = "2.5.0"
indoc = "2.0.5"
rangemap = "1.5.1"
enum-map = "2.7.3"
rustc-hash = "2.0.0"
nohash = "0.2.0"
bytemuck = "1.16.1"
priority-queue = "2.1.0"
ordered-float = { version = "4.2.2", features = ["bytemuck", "serde"] }
futures = "0.3.30"

[dev-dependencies]
criterion = "0.5.1"
